--- a/index.html
+++ b/index.html
@@ -14,9 +14,45 @@ background:radial-gradient(circle at top,#0f172a,#020617);
 font-family:Segoe UI,system-ui,sans-serif;
 color:white;
 }
-.header{text-align:center;padding:15px}
-.balance{font-size:42px;font-weight:800}
-.rate{color:#22c55e;font-weight:600}
+
+.header{
+text-align:center;
+padding:14px;
+}
+
+.balance{
+font-size:44px;
+font-weight:800;
+}
+
+.rate{
+color:#22c55e;
+font-weight:600;
+}
+
+.central{
+margin:12px;
+background:linear-gradient(145deg,#0b1225,#020617);
+border-radius:22px;
+padding:18px;
+border:2px solid #facc15;
+box-shadow:0 0 25px rgba(250,204,21,.25);
+text-align:center;
+cursor:pointer;
+}
+
+.central i{
+font-size:48px;
+color:#facc15;
+}
+
+.central h2{
+margin:6px 0;
+}
+
+.central small{
+color:#94a3b8;
+}
 
 .grid{
 display:grid;
@@ -33,11 +69,21 @@ border:1px solid rgba(255,255,255,.06);
 box-shadow:0 0 15px rgba(0,0,0,.7);
 cursor:pointer;
 transition:.15s;
+text-align:center;
 }
-.card:hover{transform:scale(1.04)}
 
-.card i{font-size:34px;margin-bottom:6px}
-.card h3{margin:3px 0}
+.card:hover{
+transform:scale(1.04);
+}
+
+.card i{
+font-size:34px;
+margin-bottom:6px;
+}
+
+.card h3{
+margin:4px 0;
+}
 
 .green{color:#22c55e}
 .blue{color:#38bdf8}
@@ -46,10 +92,18 @@ transition:.15s;
 .yellow{color:#facc15}
 
 .overlay,.modal{
-position:fixed;top:0;left:0;width:100%;height:100%;display:none;
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+display:none;
 }
 
-.overlay{background:rgba(0,0,0,.65);z-index:10}
+.overlay{
+background:rgba(0,0,0,.7);
+z-index:10;
+}
 
 .modal{
 z-index:11;
@@ -62,22 +116,6 @@ inset:0;
 height:max-content;
 }
 
-button{
-width:100%;
-padding:12px;
-border-radius:14px;
-border:none;
-background:#2563eb;
-color:white;
-font-weight:700;
-font-size:16px;
-cursor:pointer;
-}
-
-button:disabled{background:#334155}
-
-.close{background:#dc2626;margin-top:10px}
-
 .stat{
 display:flex;
 justify-content:space-between;
@@ -86,6 +124,28 @@ background:#020617;
 border-radius:10px;
 margin:6px 0;
 border:1px solid rgba(255,255,255,.05);
+}
+
+button{
+width:100%;
+padding:12px;
+border-radius:14px;
+border:none;
+background:#2563eb;
+color:white;
+font-weight:700;
+font-size:15px;
+cursor:pointer;
+margin-top:6px;
+}
+
+button:disabled{
+background:#334155;
+}
+
+.close{
+background:#dc2626;
+margin-top:10px;
 }
 </style>
 </head>
@@ -98,13 +158,13 @@ border:1px solid rgba(255,255,255,.05);
 <div class="rate">+ <span id="rate">0</span> / hr</div>
 </div>
 
-<div class="grid">
-
-<div class="card yellow" onclick="openCentral()">
+<div class="central" onclick="openCentral()">
 <i class="fa-solid fa-city"></i>
-<h3>Edificio Central</h3>
-<small>Estadísticas</small>
+<h2>Edificio Central</h2>
+<small>Estadísticas generales</small>
 </div>
+
+<div class="grid">
 
 <div class="card yellow" onclick="openBank()">
 <i class="fa-solid fa-building-columns"></i>
@@ -148,7 +208,6 @@ border:1px solid rgba(255,255,255,.05);
 
 <div class="modal" id="centralModal">
 <h3>🏛 Edificio Central</h3>
-<div class="stat"><span>Banco</span><span id="s_banco">0</span></div>
 <div class="stat"><span>Tienda</span><span id="s_tienda">0</span></div>
 <div class="stat"><span>Casino</span><span id="s_casino">0</span></div>
 <div class="stat"><span>Piscinas</span><span id="s_piscina">0</span></div>
@@ -171,7 +230,6 @@ border:1px solid rgba(255,255,255,.05);
 </div>
 
 <script>
-
 let diamonds=0;
 
 let buildings={tienda:0,casino:0,piscina:0,parque:0,diversion:0};
@@ -202,7 +260,6 @@ document.getElementById("diamonds").innerText=Math.floor(diamonds);
 setInterval(addDiamonds,1000);
 
 function openCentral(){
-document.getElementById("s_banco").innerText="—";
 document.getElementById("s_tienda").innerText=buildings.tienda*PROD.tienda;
 document.getElementById("s_casino").innerText=buildings.casino*PROD.casino;
 document.getElementById("s_piscina").innerText=buildings.piscina*PROD.piscina;
@@ -273,7 +330,6 @@ document.querySelectorAll('.modal').forEach(m=>m.style.display="none");
 }
 
 calcRate();
-
 </script>
 
 </body>
